manifests/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
  labels:
    app: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: jvmilazz0/kavita:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /kavita/config
            - name: books
              mountPath: /books
              subPath: media/books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: books
          persistentVolumeClaim:
            claimName: nfs-media-pvc
